--- a/readthedocsext/theme/templates/includes/header.html
+++ b/readthedocsext/theme/templates/includes/header.html
@@ -12,20 +12,36 @@
     <!-- BEGIN header nav -->
     <div class="right menu">
       {% if request.user.is_authenticated %}
-        <div class="ui pointing link dropdown item">
-
-            <img class="ui avatar image" src="{% gravatar_url request.user.email 24 %}">
-            <div class="text">
-              {{ request.user }}
-            </div>
-            <i class="dropdown icon"></i>
-            <div class="menu">
-              <a class="item" href="{% url 'projects_dashboard' %}">{% trans "My Projects" %}</a>
-              <a class="item" href="{% url 'profiles_profile_edit' %}">{% trans "Settings" %}</a>
-              <a class="item" href="{% url 'support' %}">{% trans "Support" %}</a>
-              <a class="item" href="{% url 'account_logout' %}">{% trans "Log Out" %}</a>
-            </div>
-
+        <a class="ui item" data-popup-on-click=1>
+          <img class="ui avatar image" src="{% gravatar_url request.user.email 24 %}">
+          <span class="text">
+            {{ request.user }}
+          </span>
+          <i class="dropdown icon"></i>
+        </a>
+        <div class="ui large inverted right top flowing popup">
+          <div class="ui inverted large list">
+            <a class="item" href="{% url 'projects_dashboard' %}">
+              <i class="inverted list alternate icon"></i>
+              {% trans "My projects" %}
+            </a>
+            <a class="item" href="{% url 'projects_import' %}">
+              <i class="inverted plus icon"></i>
+              {% trans "Add project" %}
+            </a>
+            <a class="item" href="{% url 'profiles_profile_edit' %}">
+              <i class="inverted cog icon"></i>
+              {% trans "Settings" %}
+            </a>
+            <a class="item" href="{% url 'support' %}">
+              <i class="inverted life ring icon"></i>
+              {% trans "Support" %}
+            </a>
+            <a class="item" href="{% url 'account_logout' %}">
+              <i class="inverted sign out alternate icon"></i>
+              {% trans "Log Out" %}
+            </a>
+          </div>
         </div>
       {% else %}
         {% url 'account_login' as login %}
