--- a/readthedocsext/theme/templates/projects/project_import.html
+++ b/readthedocsext/theme/templates/projects/project_import.html
@@ -1,43 +1,345 @@
 {% extends "base.html" %}
+
 {% load static %}
 {% load i18n %}
 {% load socialaccount %}
 
-{% block title %}{% trans "Import a Remote Repository" %}{% endblock %}
-
-{% block extra_links %}
-  <link rel="stylesheet" type="text/css" href="{% static "projects/css/import.css" %}" />
-{% endblock %}
+{% block title %}{% trans "Add project" %}{% endblock %}
 
 {% block extra_scripts %}
-  <script type="text/javascript" src="{% static "vendor/knockout.js" %}"></script>
-  <script type="text/javascript" src="{% static "projects/js/import.js" %}"></script>
   <script type="text/javascript">
-   var import_views = require('projects/import');
-   $(document).ready(function() {
-     var instance = {},
-         config = {
-           'csrf_token': '{{ view_csrf_token }}',
-           'urls': {
-             'api_sync_remote_repositories': '{% url 'api_sync_remote_repositories' %}',
-             'remoteorganization-list': '{% url 'remoteorganization-list' %}',
-             'remoterepository-list': '{% url 'remoterepository-list' %}',
-             'remoteaccount-list': '{% url 'remoteaccount-list' %}',
-             'projects_import': '{% url 'projects_import' %}'
-           }
-         },
-         view = import_views.ProjectImportView.init(
-           $('body').get(0),
-           instance,
-           config
-         );
-   });
+readthedocs.site.project.create.ProjectCreateView.init(
+  {
+    'urls': {
+      'api_sync_remote_repositories': '{% url 'api_sync_remote_repositories' %}',
+      'remoterepository_list': '{% url 'remoterepository-list' %}',
+    },
+    'csrf_token': '{{ view_csrf_token }}',
+  },
+  '#project-create-view',
+);
   </script>
 {% endblock %}
 
-
 {% block content %}
 
+  {# Common URLs used in a few places #}
+  {% url "socialaccount_connections" as url_connected_services %}
+
+  {# Header #}
+  <div class="ui very padded centered stackable grid">
+    <div class="ui five wide computer four wide large screen computer only column">
+      {# Placeholder for column offset #}
+    </div>
+    <div class="ui sixteen wide tablet eleven wide computer twelve wide large screen column">
+      <h1 class="ui medium header">
+        <div class="content">
+          {% trans "Add project" %}
+          <div class="sub header">
+            {% trans "Create a new project from a repository" %}
+          </div>
+        </div>
+      </h1>
+    </div>
+  </div>
+  {# End header #}
+
+  <div class="ui very padded stackable grid" id="project-create-view">
+
+    {# Sidebar #}
+    <div class="ui sixteen wide tablet five wide computer four wide large screen column">
+      <div class="ui fluid secondary pointing vertical menu" data-bind="css: {vertical: device.computer()}">
+        <a class="item active" data-tab="automatic">
+          <i class="magic icon"></i>
+          {% trans "Configure automatically" %}
+        </a>
+        <a class="item" data-tab="manual">
+          <i class="hand sparkles icon"></i>
+          {% trans "Configure manually" %}
+        </a>
+      </div>
+    </div>
+    {# End sidebar #}
+
+    <div class="ui sixteen wide tablet eleven wide computer ten wide large screen column">
+
+      <div class="ui active tab" data-tab="automatic">
+
+
+
+      {% if has_connected_accounts %}
+        {# Search prompt and dropdown #}
+        <div class="ui fluid disabled loading search" data-bind="css: {disabled: is_loading(), loading: is_loading()}">
+          <div class="ui fluid icon large action input">
+            <input class="ui text" type="text" placeholder="{% trans "Search repositories" %}">
+            <button
+                class="ui right icon button"
+                data-bind="click: sync_remote_repos, css: {disabled: is_syncing(), loading: is_syncing()}"
+                data-content="{% trans "Refresh repositories" %}">
+              <i class="refresh icon"></i>
+            </button>
+          </div>
+          <div class="results"></div>
+
+          {% comment %}
+            This is the template used by Knockout to render the SUI search
+            template. The output format is similar, but there is additional
+            conditional blocks for display purposes. The `standard` search
+            template only uses image, title, and description.
+
+            This template will be loaded on search results and rendered to a
+            string. The `response` object received by `onResponse` is used in
+            the context binding, but the attributes are observable attributes.
+          {% endcomment %}
+          <script type="text/html" id="remote-repo-results">
+<div data-bind="foreach: results" class="results">
+  <a class="result">
+    <div class="image">
+      <img data-bind="attr: {src: avatar_url}">
+    </div>
+    <div class="content">
+      <div class="title">
+        <span class="text" data-bind="text: full_name"></span>
+        {# Because of the search popup, a nested popup using data-content doesn't do anything here #}
+        <i class="ui eye slash small grey icon"
+           style="display: none"
+           data-bind="visible: private"></i>
+        <i class="ui magic small grey icon"
+           style="display: none"
+           data-bind="visible: admin"></i>
+        <i class="ui download small grey icon"
+           style="display: none"
+           data-bind="visible: project"></i>
+      </div>
+      <div class="description">
+        <span data-bind="text: clone_url"></span>
+      </div>
+    </div>
+  </a>
+</div>
+          </script>
+
+        </div>
+        {# End of search prompt and dropdown #}
+
+        <div class="ui placeholder segment" data-bind="visible: !is_selected()">
+
+          {% if not has_connected_accounts %}
+            <div class="ui icon info message">
+              <i class="magic icon"></i>
+              <div class="content">
+                <p>
+                  {# Translators: "connected service" refers to the user setting page for "Connected Services" #}
+                  {% blocktrans trimmed %}
+                    To enable automatic configuration of repositories, you must first
+                    add a connected service to your account.
+                  {% endblocktrans %}
+                </p>
+                <button class="ui right floated button" href="{{ url_connected_services }}">
+                  {% trans "Add a connected service" %}
+                </button>
+              </div>
+            </div>
+          {% endif %}
+
+          <div class="ui icon header">
+            {% trans "Configure a repository" %}
+
+            <div class="sub header">
+              {% if not has_connected_accounts %}
+                {# User does not yet have any connected accounts, don't ask to "select repository" #}
+                {# Translators: "connected service" refers to the user setting page for "Connected Services" #}
+                {% blocktrans trimmed with url=url_connected_services %}
+                  To enable automatic configuration of repositories, you must first
+                  <a href="{{ url }}">add a connected service to your account</a>.
+                  If you do not have an account to connect, you may still be able
+                  to manually configure repositories.
+                {% endblocktrans %}
+              {% else %}
+                {# User has connected accounts, don't point to connecting GitHub/etc #}
+                {% blocktrans trimmed %}
+                  If you do not see the repository you would like to configure, you
+                  can try refreshing the list of repositories, or you might be able
+                  to add a new project by manually configure your repository.
+                {% endblocktrans %}
+              {% endif %}
+            </div>
+          </div>
+        </div>
+        {# End placeholder segment when no repository is selected #}
+
+        {# Card display for selected remote repository #}
+        <div class="ui fluid card" data-bind="visible: is_selected, with: selected" style="display: none;">
+          <div class="content">
+            <img class="ui right floated mini rounded image" data-bind="attr: { src: avatar_url }">
+            <div class="header" data-bind="text: full_name"></div>
+            <div class="meta" data-bind="text: clone_url"></div>
+            <div class="description">
+
+              <div class="ui basic segment">
+                <div class="ui relaxed list">
+
+                  {# Do we support private repositories? #}
+                  <div class="item">
+                    <i class="eye icon" data-bind="css: {'slash': private}"></i>
+                    <div class="content">
+                      <div class="header">
+                        <span data-bind="visible: !private">
+                          {% trans "Repository is public" %}
+                        </span>
+
+                        <span class="ui red text" data-bind="visible: private">
+                          {% trans "Repository is private" %}
+                        </span>
+                      </div>
+                      <div class="description">
+                        <span data-bind="visible: !private">
+                          {% blocktrans trimmed %}
+                            This repository can be cloned.
+                          {% endblocktrans %}
+                        </span>
+
+                        <p class="ui red text" data-bind="visible: private">
+                          {% blocktrans trimmed %}
+                            Private repositories are not supported
+                          {% endblocktrans %}
+                        </p>
+                        <p class="ui red text" data-bind="visible: private">
+                          <a class="ui red mini basic button">Read more</a>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+
+
+                  {# Does user have admin privileges needed to import? #}
+                  <div class="item">
+                    <i class="magic icon" data-bind="css: {red: !admin}"></i>
+                    <div class="content">
+                      <div class="header">
+                        <span data-bind="visible: admin">
+                          {% trans "Repository can be automatically configured" %}
+                        </span>
+
+                        <span class="ui red text" data-bind="visible: !admin">
+                          {% trans "Repository must be manually configured" %}
+                        </span>
+                      </div>
+                      <div class="description">
+                        <span data-bind="visible: admin">
+                          {% blocktrans trimmed %}
+                            You have the necessary privileges needed to configure
+                            this repository.
+                          {% endblocktrans %}
+                        </span>
+
+                        <p class="ui red text" data-bind="visible: !admin">
+                          {% blocktrans trimmed %}
+                            You do not have the necessary permissions to
+                            automatically configure this repository. Additional steps
+                            will be required to configure this repository.
+                          {% endblocktrans %}
+                        </p>
+                        <p class="ui red text" data-bind="visible: !admin">
+                          <a class="ui red mini basic button">Read more</a>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+
+
+                  {# Is the repository already imported? #}
+                  <div class="item" data-bind="if: has_project">
+                    <i class="plus icon"></i>
+                    <div class="content">
+                      <div class="header">
+                        {% trans "Repository is already configured" %}
+                      </div>
+                      <div class="description">
+                        <p>
+                        {% blocktrans trimmed %}
+                          This repository can was previously configured for
+                          another project already. Configuring this repository
+                          again will not affect existing projects.
+                        {% endblocktrans %}
+                        </p>
+                        <p data-bind="with: project">
+                          <i class="external icon"></i>
+                          <a data-bind="text: name, attr: {href: url}" target="_blank"></a>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+
+
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="extra content">
+            <span class="right floated">
+              <form action="{% url 'projects_import' %}" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="name" data-bind="value: name" />
+                <input type="hidden" name="repo" data-bind="value: clone_url" />
+                <input type="hidden" name="repo_type" data-bind="value: vcs" />
+                <input type="hidden" name="project_url" data-bind="value: html_url" />
+                <input type="hidden" name="remote_repository" data-bind="value: id" />
+
+                <button class="ui primary button">
+                  {% trans "Set up" %}
+                </button>
+              </form>
+            </span>
+          </div>
+        </div>
+        {# End card display for selected remote repository #}
+
+      {% endif %}
+      {# End conditional has_connected_accounts #}
+      </div>
+
+
+      <div class="ui tab" data-tab="manual">
+        <div class="ui warning message">
+          {% blocktrans trimmed %}
+            Extra steps well be required to complete repository setup.
+          {% endblocktrans %}
+        </div>
+        <p>
+          {% blocktrans trimmed %}
+            We recommend you only attempt manual configuration if you are
+            familiar with configuring your repository and have the necessary
+            admin privileges to configure the repository. Manual configuration
+            will require several steps after your project is created in order
+            to automatically build your project on changes to the repository.
+          {% endblocktrans %}
+        </p>
+        <div class="ui right aligned basic segment">
+          <a class="ui basic button" href="https://docs.readthedocs.io/en/stable/intro/import-guide.html" target="_blank">
+            <i class="question icon"></i>
+            {% trans "Read more" %}
+          </a>
+          <a class="ui button" href="{% url 'projects_import_manual' %}">
+            <i class="exclamation icon"></i>
+            {% trans "Continue" %}
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+{% endblock content %}
+
+{% block newcontent %}
+  <div class="ui stackable grid">
+    <div class="ui ten wide column">
+    {% include "projects/partials/remote_repo_list.html" with objects=remote_repos %}
+  </div>
+{% endblock newcontent %}
+
+{% block oldcontent %}
   <div
       class="ui list"
       style="display: none;"
@@ -57,68 +359,11 @@
   {% block main_content %}
     <div class="ui basic padded segment">
 
-      <button
-          data-bind="click: sync_projects, visible: !is_syncing()"
-          class="ui right floated button">
-        <span>{% trans "Refresh your accounts" %}</span>
-      </button>
       <span
           data-bind="visible: is_syncing"
           style="display: none;">
         <img src="{% static 'core/img/loader.gif' %}"/>
       </span>
-
-      <h1>{% trans "Import a Repository" %}</h1>
-
-      {% if has_connected_accounts %}
-        {% block private-repo-tip %}
-          <div>
-            <p>
-            {% blocktrans trimmed %}
-                We're only showing public repositories. For private projects and many of features,
-                please use <a href="https://readthedocs.com/">Read the Docs for Business</a>.
-            {% endblocktrans %}
-            </p>
-          </div>
-        {% endblock %}
-      {% endif %}
-      
-
-      <div class="ui list" data-bind="visible: is_ready() && !has_projects()" style="display: none;">
-        <div class="item">
-          {% if has_connected_accounts %}
-            <p>
-              {% blocktrans trimmed with binding='data-bind="click: sync_projects"' %}
-                No remote repositories found,
-                try <a href="#" {{ binding }}>refreshing your accounts</a>.
-              {% endblocktrans %}
-            </p>
-          {% else %}
-            <p>
-              {% blocktrans trimmed %}
-                You don't currently have any connected accounts.
-                Connect your account to be able to easily set up projects.
-              {% endblocktrans %}
-            </p>
-        
-            <div class="ui list">
-              {% include "socialaccount/snippets/provider_list.html" with process="connect" next="/dashboard/import/" %}
-            </div>
-          
-          {% endif %}
-          </div>
-        </div>
-
-      <div data-bind="foreach: projects" class="ui list">
-        <div
-            class="item"
-            data-bind="visible: full_name"
-            style="display: none;">
-
-          <img
-              data-bind="attr: {src: avatar_url}"
-              height="24"
-          />
 
           <div>
             <a data-bind="attr: {href: html_url}, text: full_name">
@@ -160,65 +405,6 @@
 
         </div>
       </div>
-
-      <div class="ui basic padded segment">
-        <div class="ui pagination menu">
-          <span data-bind="visible: !page_previous()" class="disabled item">
-            ‹‹ {% trans "previous" %}
-          </span>
-          <a
-              href="#"
-              data-bind="visible: page_previous, click: previous_page"
-              class="item">
-            ‹‹ {% trans "previous" %}
-          </a>
-
-          <span data-bind="visible: !page_next()" class="disabled item">
-            {% trans "next" %} ››
-          </span>
-          <a
-              href="#"
-              data-bind="visible: page_next, click: next_page"
-              class="item">
-            {% trans "next" %} ››
-          </a>
-        </div>
-      </div>
-    </div>
-  {% endblock main_content %}
-
-  {% block sidebar_content %}
-    <div class="ui basic padded segment">
-
-      {% block manual-import %}
-        <div>
-          <p>
-            {% blocktrans trimmed %}
-              You can import your project manually if it isn't listed here or
-              connected to one of your accounts.
-            {% endblocktrans %}
-          </p>
-
-          <form action="{% url "projects_import_manual" %}" method="get" class="ui form">
-            <input class="ui button" type="submit" value="{% trans "Import Manually" %}"/>
-          </form>
-        </div>
-      {% endblock %}
-
-      {% block filter-repositories %}
-        <div data-bind="visible: filters().length > 0">
-          <h3>{% trans "Filter repositories" %}</h3>
-
-          <div data-bind="foreach: filters" class="ui list">
-            <div
-                class="item"
-                data-bind="css: {'remote-filter-hidden': filtered()}, click: function () { $root.set_filter_by(filter_id(), filter_type); }">
-              <img data-bind="attr: {src: avatar_url}" />
-              <span data-bind="text: display_name" ></span>
-          </div>
-        </div>
-        </div>
-      {% endblock %}
 
     </div>
   {% endblock %}
