--- a/src/css/components/forms.less
+++ b/src/css/components/forms.less
@@ -1,3 +1,4 @@
-form input[type=password], form input[type=email] {
-    width: 100%;
+form input[type="password"],
+form input[type="email"] {
+  width: 100%;
 }
