--- a/readthedocsext/theme/templates/projects/project_advanced.html
+++ b/readthedocsext/theme/templates/projects/project_advanced.html
@@ -1,12 +1,11 @@
 {% extends "projects/project_edit_base.html" %}
 
 {% load i18n %}
-
 {% load crispy_forms_tags %}
 
 {% block title %}{{ project.name }} - {% trans "Advanced Settings" %}{% endblock %}
 {% block project_edit_content_header %}{% trans "Advanced Settings" %}{% endblock %}
-{% block project-advanced-active %}active{% endblock %}
+{% block project_advanced_active %}active{% endblock %}
 
 {% block project_edit_content %}
   <form class="ui form">
