--- a/readthedocsext/theme/templates/projects/project_edit.html
+++ b/readthedocsext/theme/templates/projects/project_edit.html
@@ -1,17 +1,11 @@
 {% extends "projects/project_edit_base.html" %}
+
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-{% block project-edit-active %}active{% endblock %}
-{% block nav-dashboard %} class="active"{% endblock %}
-
-
 {% block title %}{% trans "Edit Project" %}{% endblock %}
-
-{% block editing-option-edit-proj %}class="active"{% endblock %}
-{% block editing-option-view %}active{% endblock %}
-
 {% block project_edit_content_header %}{% trans "Settings" %}{% endblock %}
+{% block project_edit_active %}active{% endblock %}
 
 {% block project_edit_content %}
   <div class="ui info message">
