--- a/readthedocsext/theme/templates/projects/project_edit_base.html
+++ b/readthedocsext/theme/templates/projects/project_edit_base.html
@@ -17,10 +17,10 @@
     <div class="ui three wide column">
 
       <div class="ui vertical pointing fluid menu">
-        <a class="item {% block project-edit-active %}{% endblock %}" href="{% url "projects_edit" project.slug %}">
+        <a class="item {% block project_edit_active %}{% endblock %}" href="{% url "projects_edit" project.slug %}">
           {% trans "Settings" %}
         </a>
-        <a class="item {% block project-advanced-active %}{% endblock %}" href="{% url "projects_advanced" project.slug %}">
+        <a class="item {% block project_advanced_active %}{% endblock %}" href="{% url "projects_advanced" project.slug %}">
           {% trans "Advanced Settings" %}
         </a>
         <a class="item {% block project_domains_active %}{% endblock %}" href="{% url "projects_domains" project.slug %}">
