--- a/readthedocsext/theme/templates/projects/projects_search_analytics.html
+++ b/readthedocsext/theme/templates/projects/projects_search_analytics.html
@@ -1,91 +1,1 @@
-{% extends "projects/project_edit_base.html" %}
-
-{% load i18n %}
-{% load static %}
-
-{% block title %}{% trans "Search Analytics" %}{% endblock %}
-
-{% block nav-dashboard %} class="active"{% endblock %}
-
-{% block project-search-analytics-active %}active{% endblock %}
-{% block project_edit_content_header %}{% trans "Search Analytics" %}{% endblock %}
-
-{% block project_edit_content %}
-  {% if show_analytics %}
-
-    <h3>{% trans "Top queries" %}</h3>
-    <div class="ui basic segment">   
-        <ul class="ui list">
-          {% for query, count in queries %}
-            <li class="item">
-              {{ query }}
-              <span class="right floated">
-                {{ count }} search{{ count|pluralize:"es" }}
-              </span>
-            </li>
-          {% empty %}
-            <li class="item">
-              <p>
-                {% trans 'No date available.' %}
-              </p>
-            </li>
-          {% endfor %}
-        </ul>
-    </div>
-
-    <br/>
-    {% if query_count_of_1_month.labels and query_count_of_1_month.int_data %}
-      <h2>{% trans "Overview of the past 1 month:" %}</h2>
-      <canvas id="analytics-chart-last-7-days" width="400" height="150"></canvas>
-    {% endif %}
-
-    <br />
-    <form class="ui form" method="get">
-      <button class="ui button" type="submit" name="download" value="true">{% trans "Download all data" %}</button>
-    </form>
-  {% else %}
-    <p>
-      {% blocktrans trimmed %}
-        Hey there! This feature is currently in beta state and is available under a
-        <a href='https://docs.readthedocs.io/page/guides/feature-flags.html#available-flags'>feature flag</a>.
-        In case you want to test this feature and help giving us feedback,
-        please contact us via
-        <a href='https://github.com/readthedocs/readthedocs.org/issues/new?title=Request%20to%20enable%20SEARCH_ANALYTICS%20feature%20flag%20for%20project%20{{ project }}'>GitHub issues</a>.
-      {% endblocktrans %}
-    </p>
-  {% endif %}
-{% endblock %}
-
-{% block extra_scripts %}
-  <!-- Chart.js v2.8.0 -->
-  <script src="{% static 'vendor/chartjs/chartjs.bundle.min.js' %}"></script>
-{% endblock %}
-
-{% block extra_links %}
-  <!-- Chart.js v2.8.0 -->
-  <link rel="stylesheet" href="{% static 'vendor/chartjs/chartjs.min.css' %}">
-{% endblock %}
-
-{% block footerjs %}
-
-  {% if query_count_of_1_month.labels and query_count_of_1_month.int_data and show_analytics %}
-    // Line chart
-    var line_chart = document.getElementById("analytics-chart-last-7-days").getContext("2d");
-    var line_chart_labels = {{ query_count_of_1_month.labels|safe }};
-    var line_chart_data = {{ query_count_of_1_month.int_data|safe }};
-
-    var line_chart = new Chart(line_chart, {
-      type: "line",
-      data: {
-        labels: line_chart_labels,
-        datasets: [{
-          label: "# of searches",
-          data: line_chart_data,
-          backgroundColor: "rgba(75,192,192,0.4)",
-          borderColor: "rgba(75, 192, 192, 1)",
-          pointBorderColor: "rgba(75, 192, 192, 1)",
-        }]
-      }
-    });
-  {% endif %}
-{% endblock %}
+search_analytics.html
