Rename a bunch of project tempaltes to make sense

--- a/readthedocsext/theme/templates/projects/project_delete.html
+++ b/readthedocsext/theme/templates/projects/project_delete.html
@@ -1,4 +1,4 @@
-{% extends "projects/base_project.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}{% blocktrans with project.name as name %}Delete {{ name }}?{% endblocktrans %}{% endblock %}
