--- a/readthedocsext/theme/templates/projects/project_translations.html
+++ b/readthedocsext/theme/templates/projects/project_translations.html
@@ -1,63 +1,1 @@
-{% extends "projects/project_edit_base.html" %}
-
-{% load i18n %}
-{% load crispy_forms_tags %}
-
-{% block title %}{{ project.name }} - {% trans "Translations" %}{% endblock %}
-
-{% block project_translations_active %}active{% endblock %}
-{% block project_edit_content_header %}{% trans "Translations" %}{% endblock %}
-
-{% block project_edit_content %}
-  {% if project.main_language_project %}
-    <div class="ui icon message">
-      <i class="exclamation icon"></i>
-      <div class="content">
-        <div class="header">
-          {% trans "Nested translations are not supported" %}
-        </div>
-        <p>
-          {% blocktrans trimmed with language=project.get_language_display  main_project=project.main_language_project.name %}
-            This project is already configured as the {{ language }} translation of
-            "{{ main_project }}".
-          {% endblocktrans %}
-        </p>
-
-        <p>
-          <a href="{% url 'projects_translations' project_slug=project.main_language_project.slug %}">
-            {% blocktrans trimmed with main_project=project.main_language_project.name %}
-              View all translations of "{{ main_project }}".
-            {% endblocktrans %}
-          </a>
-        </p>
-      </div>
-    </div>
-  {% else %}
-    {% include "projects/partials/edit/translation_list.html" with objects=lang_projects %}
-
-    {% trans "Add translation" as action_text %}
-    <h3 class="ui small heading">{{ action_text }}</h3>
-    <form class="ui form" method="post" action=".">
-      {% csrf_token %}
-      {{ form|crispy }}
-      <input class="ui primary button" type="submit" value="{{ action_text }}">
-    </form>
-  {% endif %}
-{% endblock %}
-
-{% block project_edit_sidebar_embed_doc %}localization{% endblock %}
-{% block project_edit_sidebar_help_topics %}
-  {{ block.super }}
-  <ul class="ui list">
-    <li class="item">
-      <div class="content">
-        <a class="header" href="https://docs.readthedocs.io/en/stable/guides/manage-translations.html" target="_blank">
-          Managing translations
-        </a>
-        <div class="description">
-          Guide
-        </div>
-      </div>
-    </li>
-  </ul>
-{% endblock project_edit_sidebar_help_topics %}
+translation_list.html
