--- a/readthedocsext/theme/templates/projects/project_edit_base.html
+++ b/readthedocsext/theme/templates/projects/project_edit_base.html
@@ -1,109 +1,1 @@
-{% extends "projects/base_project.html" %}
-
-{% load i18n %}
-
-{% block project_editing %}
-  {% with edit_active="active" %}
-    {% include "core/project_bar.html" %}
-  {% endwith %}
-{% endblock %}
-
-{% block content %}
-  {# TODO don't do this. fix the spacing issue with the container #}
-  <p></p>
-
-  <div class="ui two column centered stackable grid">
-
-    <div class="ui three wide column">
-
-      <div class="ui vertical pointing fluid menu">
-        <a class="item {% block project_edit_active %}{% endblock %}" href="{% url "projects_edit" project.slug %}">
-          {% trans "Settings" %}
-        </a>
-        <a class="item {% block project_advanced_active %}{% endblock %}" href="{% url "projects_advanced" project.slug %}">
-          {% trans "Advanced Settings" %}
-        </a>
-        <a class="item {% block project_domains_active %}{% endblock %}" href="{% url "projects_domains" project.slug %}">
-          {% trans "Domains" %}
-        </a>
-        <a class="item {% block project_users_active %}{% endblock %}" href="{% url "projects_users" project.slug %}">
-          {% trans "Maintainers" %}
-        </a>
-        <a class="item {% block project_translations_active %}{% endblock %}" href="{% url "projects_translations" project.slug %}">
-          {% trans "Translations" %}
-        </a>
-        <a class="item {% block project_subprojects_active %}{% endblock %}" href="{% url "projects_subprojects" project.slug %}">
-          {% trans "Subprojects" %}
-        </a>
-        <a class="item {% block project_integrations_active %}{% endblock %}" href="{% url "projects_integrations" project.slug %}">
-          {% trans "Integrations" %}
-        </a>
-        <a class="item {% block project_environment_variables_active %}{% endblock %}" href="{% url "projects_environmentvariables" project.slug %}">
-          {% trans "Environment Variables" %}
-        </a>
-        <a class="item {% block project_automation_rules_active %}{% endblock %}" href="{% url "projects_automation_rule_list" project.slug %}">
-          {% trans "Automation Rules" %}
-        </a>
-        <a class="item {% block project_notifications_active %}{% endblock %}" href="{% url "projects_notifications" project.slug %}">
-          {% trans "Notifications" %}
-        </a>
-        <a class="item {% block project_redirects_active %}{% endblock %}" href="{% url "projects_redirects" project.slug %}">
-          {% trans "Redirects" %}
-        </a>
-        <a class="item {% block project_search_analytics_active %}{% endblock %}" href="{% url "projects_search_analytics" project.slug %}">
-          {% trans "Search Analytics" %}
-        </a>
-        <a class="item {% block project_traffic_analytics_active %}{% endblock %}" href="{% url "projects_traffic_analytics" project.slug %}">
-          {% trans "Traffic Analytics" %}
-        </a>
-        {% if USE_PROMOS %}
-          <a class="item {% block project_ads_active %}{% endblock %}" href="{% url "projects_advertising" project.slug %}">
-            {% trans "Advertising" %}
-          </a>
-        {% endif %}
-      </div>
-    </div>
-
-    <div class="ui nine wide column">
-      <h2 class="ui medium dividing header">
-        {% block project_edit_content_header %}
-        {% endblock project_edit_content_header %}
-        <div class="sub header">
-          {% block project_edit_content_subheader %}
-          {% endblock project_edit_content_subheader %}
-        </div>
-      </h2>
-
-      <div id="edit-content">
-        {% block project_edit_content %}
-        {% endblock project_edit_content %}
-      </div>
-    </div>
-
-    <div class="ui four wide column" id="edit-right">
-
-      {% block project_edit_sidebar %}
-        <div class="ui basic segment">
-          <h2 class="ui small header">{% trans "Help topics" %}</h2>
-          {% block project_edit_sidebar_help_topics %}
-            <div data-embed-doc-view="{% block project_edit_sidebar_embed_doc %}{% endblock %}"
-                 data-bind="template: { name: 'doc-topics' }">
-            </div>
-          {% endblock project_edit_sidebar_help_topics %}
-        </div>
-        <div class="ui basic segment">
-          <a href="https://docs.readthedocs.io/en/stable/" target="_blank">
-            View our full docs
-          </a>
-        </div>
-
-        {% block project_edit_sidebar_extra %}
-        {% endblock project_edit_sidebar_extra %}
-      {% endblock project_edit_sidebar %}
-
-    </div>
-
-  </div>
-
-  {% include "includes/utils/embed_docs.html" %}
-{% endblock content %}
+edit_base.html
