--- a/readthedocsext/theme/templates/projects/project_resync_webhook.html
+++ b/readthedocsext/theme/templates/projects/project_resync_webhook.html
@@ -1,4 +1,4 @@
-{% extends "projects/base_project.html" %}
+{% extends "base.html" %}
 {% load i18n %}
 
 {% block title %}Resync webhook{% endblock title %}
