Update account detail views

--- a/readthedocsext/theme/templates/account/password_change.html
+++ b/readthedocsext/theme/templates/account/password_change.html
@@ -1,22 +1,16 @@
 {% extends "profiles/base_profile_edit.html" %}
 
 {% load i18n %}
+{% load crispy_forms_tags %}
 
-
-
-{% block title %}{% trans "Change Password" %}{% endblock %}
-
-{% block profile-admin-change-password %}active{% endblock %}
-
-{% block edit_content_header %}{% trans "Change Password" %}{% endblock %}
+{% block title %}{% trans "Security" %}{% endblock %}
+{% block profile_admin_change_password %}active{% endblock %}
+{% block edit_content_header %}{% trans "Security" %}{% endblock %}
+{% block edit_content_subheader %}{% trans "Change Password" %}{% endblock %}
 
 {% block edit_content %}
-  <div class="ui two column grid">
-    <div class="ui ten wide column">
-      <form method="POST" action="." class="ui form">
-        {% csrf_token %}
-        {% include "includes/forms/semanticui.html" with form=form submit_text=action %}
-      </form>
-    </div>
-  </div>
+  <form method="POST" action="." class="ui form">
+    {% csrf_token %}
+    {{ form|crispy }}
+  </form>
 {% endblock %}
