--- a/readthedocsext/theme/templates/profiles/private/advertising_profile.html
+++ b/readthedocsext/theme/templates/profiles/private/advertising_profile.html
@@ -1,15 +1,13 @@
 {% extends "profiles/base_profile_edit.html" %}
 
 {% load i18n %}
+{% load crispy_forms_tags %}
 
 {% block title %}{% trans "Set advertising preferences" %}{% endblock %}
-
-{% block profile-admin-advertising %}active{% endblock %}
-
+{% block profile_admin_advertising %}active{% endblock %}
 {% block edit_content_header %} {% trans "Set advertising preferences" %} {% endblock %}
 
 {% block edit_content %}
-
   {% if request.user.gold.exists or request.user.goldonce.exists %}
     <p>
       {% blocktrans trimmed %}
@@ -45,7 +43,7 @@
 
     <form class="ui form" method="POST" action=".">
       {% csrf_token %}
-      {{ form.as_p }}
+      {{ form|crispy }}
       <input class="ui button" type="submit" name="submit" value="{% trans "Update advertisement preference" %}" id="submit"/>
     </form>
   {% endif %}
