--- a/readthedocsext/theme/templates/socialaccount/connections.html
+++ b/readthedocsext/theme/templates/socialaccount/connections.html
@@ -3,78 +3,11 @@
 {% load i18n %}
 
 {% block title %}{% trans "Connected Services" %}{% endblock %}
-
 {% block edit_content_header %}{% trans "Connected Services" %}{% endblock %}
-
-{% block profile-admin-social-accounts %}active{% endblock %}
+{% block profile_admin_social_accounts %}active{% endblock %}
 
 {% block edit_content %}
-
-  <div class="ui basic segment top attached right aligned">
-    <div class="ui tiny green icon button" data-modal="#socialaccount-connections-modal">
-      <i class="plus icon"></i>
-      {% trans "Add new connection" %}
-    </div>
-  </div>
-
-  {% if not form.accounts %}
-    <div class="ui attached placeholder segment">
-      <div class="ui icon header">
-        <i class="user plus outline icon"></i>
-        {% trans 'Your account is not connected to any services.' %}
-      </div>
-      <div class="inline">
-        <p>
-          {% blocktrans trimmed %}
-            Add a new connection to to enable automatic import and
-            configuration of new projects.
-          {% endblocktrans %}
-        </p>
-      </div>
-    </div>
-  {% else %}
-    <div class="ui attached list">
-
-      {% for base_account in form.accounts %}
-        {% with base_account.get_provider_account as account %}
-          <div class="item">
-
-            <img src="{{ base_account.get_avatar_url }}" class="account-gravatar" height=24 width=24 />
-
-            <span>
-              {{ account }}
-              <span class="{{ base_account.provider }} {{ account.get_brand.id }}">
-                ({{ account.get_brand.name }})
-              </span>
-            </span>
-
-            <div class="ui list">
-              <div class="item">
-                <form method="post" action="{% url 'socialaccount_connections' %}">
-                  {% csrf_token %}
-                  <input type="hidden" name="account" value="{{ base_account.id }}" />
-                  <input type="submit" name="submit" value="{% trans 'Disconnect' %}" />
-                </form>
-              </div>
-            </div>
-
-            {% if base_account.provider == 'bitbucket' %}
-              <p class="ui negative message">
-                {% blocktrans trimmed %}
-                  The API version this connection uses is no longer
-                  supported, please reconnect your Bitbucket account.
-                {% endblocktrans %}
-              </p>
-            {% endif %}
-
-            </div>
-        {% endwith %}
-      {% endfor %}
-
-    </div>
-  {% endif %}
-
-  {% include "socialaccount/snippets/login_extra.html" %}
+  {% include "socialaccount/partials/social_account_list.html" with objects=form.accounts %}
 
   <div class="ui tiny modal" id="socialaccount-connections-modal">
     <i class="close icon"></i>
@@ -84,7 +17,9 @@
     <div class="content center aligned">
       <div class="ui basic center aligned segment">
         <p>
-          You can connect your account with any of the following providers:
+          {% blocktrans trimmed %}
+            You can connect your account with any of the following providers:
+          {% endblocktrans %}
         </p>
         <div class="ui list">
           {% include "socialaccount/snippets/provider_list.html" with process="connect" next="" %}
@@ -97,5 +32,4 @@
       </div>
     </div>
   </div>
-
 {% endblock %}
