Add base for popupcards, none of these are done yet

--- a/readthedocsext/theme/templates/includes/popupcards/version.html
+++ b/readthedocsext/theme/templates/includes/popupcards/version.html
@@ -1,4 +1,4 @@
-<div class="ui flowing popup">
+<div class="ui flowing popup" data-bind="withHover: {}">
   <a class="header">Version {{ version.verbose_name }}</a>
   <div class="meta">
     100 builds
